# wiki-census-eval

./: .gitignore  README.md  pyproject.toml
precomputed-before/municipality/01/00100/Abanda__Alabama/: before_demographics_section.wikitext  before_manifest.json
precomputed-before/municipality/01/00484/Addison__Alabama/: before_demographics_section.wikitext  before_manifest.json
precomputed-before/municipality/01/00676/Akron__Alabama/: before_demographics_section.wikitext  before_manifest.json
precomputed-before/municipality/01/01396/Allgood__Alabama/: before_demographics_section.wikitext  before_manifest.json
precomputed-before/municipality/01/01660/Altoona__Alabama/: before_demographics_section.wikitext  before_manifest.json
precomputed-before/municipality/01/01756/Anderson__Alabama/: before_demographics_section.wikitext  before_manifest.json
precomputed-before/municipality/01/02428/Ariton__Alabama/: before_demographics_section.wikitext  before_manifest.json
precomputed-before/municipality/01/02500/Arley__Alabama/: before_demographics_section.wikitext  before_manifest.json
precomputed-before/municipality/01/03220/Autaugaville__Alabama/: before_demographics_section.wikitext  before_manifest.json
precomputed-before/municipality/01/03364/Avon__Alabama/: before_demographics_section.wikitext  before_manifest.json
tests/: test_artifacts.py  test_cli.py  test_clients.py  test_pipeline.py  test_states.py
wiki_census_eval/: __init__.py  artifacts.py  case_lists.py  cli.py  clients.py  history.py  pipeline.py  prompts.py  schema.py  states.py  storage.py
(+32135 files in other folders)
